# NotesTauri

./: .gitignore  .taurignore  bts.jsonc  package-lock.json  package.json  tauri.key  tauri.pub  turbo.json  update.json
.github/workflows/: release.yml
apps/web/: .taurignore  index.html  package.json  vite.config.ts
apps/web/scripts/: update-version.js
apps/web/src/: index.css  main.tsx  routeTree.gen.ts
apps/web/src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/notes/app_data/: sidebar_state.json
apps/web/src-tauri/notes/notes/: note_1753821399408.json
apps/web/src-tauri/src/: lib.rs  main.rs  version.rs
apps/web/src/components/: Splashscreen.tsx  app-sidebar.tsx  error-boundary.tsx  header.tsx  notes-command.tsx  scrollbar-examples.tsx  tiptap-editor.tsx
apps/web/src/components/dual-sidebar/: app-sidebar.tsx  header.tsx  index.tsx  right-sidebar.tsx
apps/web/src/components/top-notes-layout/: app-menubar.tsx  editor-format-toolbar.tsx  index.tsx  toolbar.tsx  top-notes-bar.tsx
apps/web/src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
apps/web/src/lib/: export-utils.ts  url-utils.ts
apps/web/src/routes/: __root.tsx  index.tsx  note.$noteId.tsx  settings.tsx
apps/web/tmp_latest/: latest.json
docs/: notes-v2.mdx
