[package]
name = "app"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] } 
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-notification = "2.3.0"
chrono = { version = "0.4", features = ["serde"] }
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy", branch = "dev" }
tauri-plugin-shell = "2.3.0"
sanitize-filename = "0.5" 
dirs = "6.0.0"
rfd = "0.15.4"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-process = "2.3.0"
tauri-plugin-opener = "2.3.0"
arboard = "3.3"
base64 = "0.22"
sha2 = "0.10"
png = "0.17"

tauri-plugin-updater = "2.9.0"

